# automation-qa-pet-project

./: .gitignore  README.md  configuration.py  conftest.py  pyproject.toml
src/baseclasses/: base_page.py  response.py
src/enums/: global_enums.py
src/pages/: explorer_page.py
src/schemas/: address_info.py
tests/: test_api.py  test_sibac.py  test_web_form.py
