[tool.poetry]
name = "automation-test-project"
version = "0.1.0"
description = ""
authors = ["Radionov Anton <a.radionov.it@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
jsonschema = "^4.10.0"
pytest = "^7.1.2"
pydantic = "^1.9.2"
selenium = "^4.5.0"
webdriver-manager = "^3.8.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[tool.pytest.ini_options]
#pythonpath = ["."]